# sculptor

./: .dockerignore  .editorconfig  .gitignore  .mergify-template.yml  .mergify.yml  .rumdl.toml  .tool-versions  Cargo.toml  Dockerfile  README-template.md  README.md  cargo-plugins.toml  committed.toml  deny.toml  justfile  krabby  krabby.sh  licenserc.toml  lychee.toml  rust-toolchain.toml  scaffold.sh  sculpt.sh
.cargo/: config.toml
.github/: renovate.json
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/actions/compute-version/: action.yml
.github/actions/setup-rust/: action.yaml
.github/workflows/: cd-all.yml  cd-docker.yml  cd-docs.yml  cd-rust.yml  cd.yml  ci-all.yml  ci-compliance.yml  ci-docker.yml  ci-docs.yml  ci-rust.yml  ci-scorecards.yml  ci-sculptor.yml  ci-security.yml  ci.yaml  ci.yml  docs.yml  dogfood.yml  publish.yml  rust.yml  scaffolding.yml
crates/rust-cli-tool-scaffold/: Cargo.toml
crates/rust-cli-tool-scaffold/src/: core.rs  main.rs
crates/rust-cli-tool-scaffold/src/core/: greeter.rs
crates/rust-cli-tool-scaffold/tests/: integration.rs
crates/sculptor/: Cargo.toml
crates/sculptor/src/: main.rs
crates/sculptor/src/core/: greeter.rs
crates/sculptor/tests/: integration.rs
crates/xtasks/: Cargo.toml
crates/xtasks/src/: artifacts.rs  main.rs  security.rs  sources.rs  tests.rs  utils.rs
docs/: changelog.md  contributing-template.md  contributing.md  development-template.md  development.md  readme.md  releasing-template.md  releasing.md  website.json
githooks/: precommit
scripts/: cargo-binstaller.sh  cross-build.sh  flex-build.sh  install-requirements.sh  prepare-release.sh
src/: core.rs  main.rs
src/core/: greeter.rs
tests/: integration.rs
