[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
authors = ["ubiratan.f.soares@gmail.com"]
description = "An opinionated way to kick-off CLI apps powered by Rust"
repository = "https://github.com/dotanuki-labs/rust-cli-tool-scaffold"
homepage = "https://github.com/dotanuki-labs/rust-cli-tool-scaffold"
documentation = "https://github.com/dotanuki-labs/rust-cli-tool-scaffold"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]

[workspace.dependencies]
rust-cli-tool-scaffold = { path = "crates/rust-cli-tool-scaffold" }
xtasks = { path = "crates/xtasks" }

anyhow = "=1.0.99"
assert_cmd = "=2.0.17"
better-panic = "=0.3.0"
clap = "=4.5.47"
hex = "=0.4.3"
human-panic = "=2.0.3"
predicates = "=3.1.3"
sha2 = "=0.10.9"
tikv-jemallocator = "0.6.0"
xshell = "=0.2.7"
walkdir = "=2.5.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
