[package]
name = "rust-cli-tool-scaffold"
description = "An opinionated way to kick-off CLI apps powered by Rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[package.metadata]
msrv = "1.74.0"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
better-panic.workspace = true
human-panic.workspace = true
mimalloc.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
