[package]
name = "rust-cli-tool-scaffold"
description = "An opinionated way to kick-off CLI apps powered by Rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
better-panic.workspace = true
clap = { workspace = true, features = ["derive"] }
human-panic.workspace = true
tikv-jemallocator.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
